# Nepal-Earthquake-Pipeline

./: README.md  clean.py  clean_earthquakes.csv  fetch.py  ingest.py  load.py  pipeline.py  pyproject.toml  raw_earthquakes.json
queries/: 01_activity_by_year_month.sql  02_depth_vs_magnitude_correlation copy.sql  03_depth_vs_magnitude_regional.sql  04_most_destructive_earthquake.sql  05_earthquake_frequency_over_time.sql  06_most_hit_areas.sql  07_typical_depth_magnitude.sql
